# nix-exec

./: Makefile.am  configure.ac
scripts/: decrypt.sh.in  fetchgit.sh.in
src/: decrypt.cc  fetchgit.cc  nix-exec-lib.cc
